fixing issue with label width on ie11

--- a/src/components/RadioButton/style.scss
+++ b/src/components/RadioButton/style.scss
@@ -9,6 +9,7 @@ $base-class: 'radio';
     cursor: pointer;
     display: inline-flex;
     align-items: flex-start;
+    width: 100%;
   }
 
   &__circle {
